DD-33257 fixing major and critical sonar issues